--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,8 @@
     <item name="buttonRzeczowniki" type="id"/>
     <item name="buttonCzasowniki" type="id"/>
 
+    <item name="zdjecie1" type="id"/>
+    <item name="zdjecie2" type="id"/>
+    <item name="zdjecie3" type="id"/>
+
 </resources>
