--- a/app/src/main/res/layout/activity_gra.xml
+++ b/app/src/main/res/layout/activity_gra.xml
@@ -7,4 +7,11 @@
     tools:context="com.example.ola.inzynierka.GraActivity"
     android:id="@+id/layoutGra">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/questionTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
