--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,8 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.ola.inzynierka.GraActivity"
-    android:id="@+id/layoutGra">
+    tools:context="com.example.ola.inzynierka.GameActivity"
+    android:id="@+id/layoutGame">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,4 +14,13 @@
         android:id="@+id/questionTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gameTable"
+        android:layout_below="@+id/questionTextView"
+        android:stretchColumns="*"
+        android:layout_alignParentStart="true"></TableLayout>
+
 </RelativeLayout>
