--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -22,6 +22,27 @@
         android:id="@+id/gameTable"
         android:layout_below="@+id/questionTextView"
         android:stretchColumns="*"
-        android:layout_alignParentStart="true"></TableLayout>
+        android:gravity="center_vertical"></TableLayout>
+
+    <ImageButton
+        android:id="@+id/buttonSoundTube"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/soundtube"
+        android:background="@null" />
+
+    <ImageButton
+        android:id="@+id/buttonNext"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:scaleType="centerInside"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:src="@drawable/garrow"
+        android:visibility="gone"/>
 
 </RelativeLayout>
