--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,7 +30,7 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:src="@drawable/soundtube"
         android:background="@null" />
 
