--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:id="@+id/buttonsLayout"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="60sp"
         android:layout_marginRight="60sp"></LinearLayout>
 </RelativeLayout>
